# Metabopolis

./: CMakeLists.txt  README.md
gallery/A/: A-SBGNv02.sbgn  A.sbgnml
gallery/kegg/: kegg.sbgnml
gallery/major/: major-SBGNv02.sbgn  major.graphml
gallery/small/: small.graphml  small.sbgnml
include/: Color.h  Common.h  CommonClass.h  ConfigSpace.h  Coord2.h  DiaLayout.h  DiaLayout.ui  GraphVizAPI.h  Line2.h  Pathway.h  PathwayData.h  Rectangle2.h
include/boost/: create_dual_graph.hpp
include/graph/: BaseEdgeProperty.h  BaseGraph.h  BaseGraphProperty.h  BaseVertexProperty.h  FlowEdgeProperty.h  FlowGraph.h  FlowVertexProperty.h  MetaboliteEdgeProperty.h  MetaboliteGraph.h  MetaboliteVertexProperty.h  PropertyGraph.h  RelationEdgeProperty.h  RelationGraph.h  RelationVertexProperty.h  RoadEdgeProperty.h  RoadGraph.h  RoadVertexProperty.h
include/hola/: Hola.h  TreeMap.h
include/optimization/: Deformation.h  Floorplan.h  Flow.h  Layout.h  MIP.h  QMIP.h
include/render/: GraphicsArrowItem.h  GraphicsBallItem.h  GraphicsBase.h  GraphicsBaseItem.h  GraphicsCurveItem.h  GraphicsDomainItem.h  GraphicsEdgeItem.h  GraphicsFlowItem.h  GraphicsMetaboliteItem.h  GraphicsNameItem.h  GraphicsReactionItem.h  GraphicsRouterItem.h  GraphicsTreemapItem.h  GraphicsTreemapNameItem.h  GraphicsVertexItem.h  GraphicsView.h  Widget.h  Window.h
include/xml/: bionetgml.h  bionetsbgnml.h  bionetsbml.h
src/: Color.cpp  Common.cpp  ConfigSpace.cpp  Coord2.cpp  DiaLayout.cpp  GraphVizAPI.cpp  Line2.cpp  Pathway.cpp  PathwayData.cpp  Rectangle2.cpp  main.cpp
src/graph/: BaseEdgeProperty.cpp  BaseGraph.cpp  BaseGraphProperty.cpp  BaseVertexProperty.cpp  FlowEdgeProperty.cpp  FlowGraph.cpp  FlowVertexProperty.cpp  MetaboliteEdgeProperty.cpp  MetaboliteGraph.cpp  MetaboliteVertexProperty.cpp  RelationEdgeProperty.cpp  RelationGraph.cpp  RelationVertexProperty.cpp  RoadEdgeProperty.cpp  RoadGraph.cpp  RoadVertexProperty.cpp
src/hola/: Hola.cpp  TreeMap.cpp
src/optimization/: Deformation.cpp  Floorplan.cpp  Flow.cpp  Layout.cpp  MIP.cpp  QMIP.cpp
src/render/: GraphicsArrowItem.cpp  GraphicsBallItem.cpp  GraphicsBaseItem.cpp  GraphicsCurveItem.cpp  GraphicsDomainItem.cpp  GraphicsEdgeItem.cpp  GraphicsFlowItem.cpp  GraphicsMetaboliteItem.cpp  GraphicsNameItem.cpp  GraphicsReactionItem.cpp  GraphicsRouterItem.cpp  GraphicsTreemapItem.cpp  GraphicsTreemapNameItem.cpp  GraphicsVertexItem.cpp  GraphicsView.cpp  Widget.cpp  Window.cpp
src/xml/: bionetgml.cpp  bionetsbgnml.cpp  bionetsbml.cpp
svg/A/: A.graphml
svg/kegg/: kegg-SBGNv02.sbgn
svg/major/: major.sbgnml
svg/small/: small-SBGNv02.sbgn
xml/A/: Alanine and aspartate metabolism.xml  Arachidonic acid metabolism.xml
xml/contest/: Citric acid cycle.xml  CoA synthesis.xml
xml/frequency/: ecoli_metabolite_frequency.txt  kegg_metabolite_frequency.txt  metabolite_frequency.txt
xml/full/: Alkaloid synthesis.xml  Aminosugar metabolism.xml  Androgen and estrogen synthesis and metabolism.xml  Arginine and Proline Metabolism.xml  Bile acid synthesis.xml  Biotin metabolism.xml  Blood group synthesis.xml  Butanoate metabolism.xml  C5-branched dibasic acid metabolism.xml  Cholesterol metabolism.xml  Chondroitin sulfate degradation.xml  Chondroitin synthesis.xml  Cysteine Metabolism.xml  Cytochrome metabolism.xml  D-alanine metabolism.xml  Dietary fiber binding.xml  Eicosanoid metabolism.xml  Exchange-demand reaction.xml  Fatty acid oxidation.xml  Fatty acid synthesis.xml  Folate metabolism.xml  Fructose and mannose metabolism.xml  Galactose metabolism.xml  Glutamate metabolism.xml  Glutathione metabolism.xml  Glycerophospholipid metabolism.xml  Glycine, serine, alanine and threonine metabolism.xml  Glycosphingolipid metabolism.xml  Heme degradation.xml  Heme synthesis.xml  Heparan sulfate degradation.xml  Histidine metabolism.xml  Hyaluronan metabolism.xml  Inositol phosphate metabolism.xml  Keratan sulfate degradation.xml  Keratan sulfate synthesis.xml  Limonene and pinene degradation.xml  Linoleate metabolism.xml  Lipoate metabolism.xml  Lysine metabolism.xml  (+52 more)
xml/kegg/: Amino Acid Metabolism.xml  Biosynthesis of Other Secondary Metabolites.xml  Carbohydrate Metabolism.xml  Energy Metabolism.xml  Fatty Acid Biosynthesis.xml  Glycan Biosynthesis and Metabolism.xml  Lipid Metabolism.xml  Metabolism of Cofactors and Vitamins.xml  Metabolism of Other Amino Acid.xml  Metabolism of Terpenoids and Polyketides.xml  Nucleotide Metabolism.xml  Pentose Phosphate Metabolism.xml  Xenobiotics Biodegradation and Metabolism.xml
xml/major/: CoA catabolism.xml  Glycolysis-gluconeogenesis.xml  Glyoxylate and dicarboxylate metabolism.xml  Oxidative phosphorylation.xml  Transport, mitochondrial.xml
xml/type/: typelist.txt
